Made the Board pic in the file
Now its not going on a journey across the web each night.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	</head>
 	<body>
 		<div id = "container">
-			<img id = "ardPic" src = "http://www.cs.ucsb.edu/~pconrad/dpea/lightsculpture/gifs/board.gif" onload = "go()" width = "0" height = "0">
+			<img id = "ardPic" src = "board.gif" onload = "go()" width = "0" height = "0">
 			
 			<!-- Canvas and Textarea: -->
 			<table id = "bigTable">
